<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.tritonus</groupId>
    <artifactId>tritonus</artifactId>
    <version>0.3.13</version>
  </parent>

  <artifactId>tritonus-core</artifactId>
  <packaging>jar</packaging>

  <name>Tritonus CORE Module</name>

  <properties>
    <aspectj.version>1.9.7</aspectj.version>
  </properties>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <executions>
          <execution>
            <id>default-compile</id>
            <phase>compile</phase>
            <goals>
              <goal>compile</goal>
            </goals>
          </execution>
          <execution>
            <id>default-testCompile</id>
            <phase>test-compile</phase>
            <configuration>
              <testExcludes>
                <testExclude>org/tritonus/debug/AJDebug.java</testExclude>
                <testExclude>org/tritonus/debug/AJDebugVorbis.java</testExclude>
              </testExcludes>
            </configuration>
            <goals>
              <goal>testCompile</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>aspectj-maven-plugin</artifactId>
        <version>1.14.0</version>
        <executions>
          <execution>
            <phase>process-test-sources</phase>
            <goals>
              <goal>test-compile</goal>
            </goals>
          </execution>
        </executions>
        <dependencies>
          <dependency>
            <groupId>org.aspectj</groupId>
            <artifactId>aspectjtools</artifactId>
            <version>${aspectj.version}</version>
            <scope>compile</scope>
          </dependency>
        </dependencies>
        <configuration>
          <complianceLevel>17</complianceLevel>
          <source>16</source>
          <target>16</target>
          <encoding>UTF-8</encoding>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <dependencies>
    <dependency>
      <groupId>org.tritonus</groupId>
      <artifactId>tritonus-share</artifactId>
    </dependency>

    <dependency>
      <groupId>org.aspectj</groupId>
      <artifactId>aspectjrt</artifactId>
      <version>${aspectj.version}</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.tritonus</groupId>
      <artifactId>tritonus-alsa</artifactId>
      <version>0.3.13</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.tritonus</groupId>
      <artifactId>tritonus-cdda</artifactId>
      <version>0.3.13</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.tritonus</groupId>
      <artifactId>tritonus-jorbis</artifactId>
      <version>0.3.13</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.tritonus</groupId>
      <artifactId>tritonus-midishare</artifactId>
      <scope>test</scope>
    </dependency>
  </dependencies>
</project>
